--- a/Web-Fundamentals/Week-3/summary/HTML_Week3_Huseyin_Budak_summary.html
+++ b/Web-Fundamentals/Week-3/summary/HTML_Week3_Huseyin_Budak_summary.html
@@ -23,6 +23,7 @@
         </section>
         <hr>
         <section id="dagilim">
+            <!--dogrulugundan tam emin olmayarak fieldset icinde details kullanarak istenilen sonucu elde ettim-->
             <fieldset>
                 <legend><b><mark>HATIRLATMA</mark></b></legend>
                 <details>
@@ -45,6 +46,7 @@
         </section>
         <br>
         <section id="liste">
+            <!--liste icnde liste yontemi kullanarak ic ice listeler olusturdum-->
             <fieldset>
                 <legend>Hafta 04 Konseptler ve Linkler</legend>
                 <details>
@@ -103,6 +105,7 @@
         <hr> <br> <br>
         <section id="tablo">
             <table>
+                <!--table'a ait taglari kullanarak  istenilen sekilde yapmaya calistim-->
                 <caption>Isvicre'de bazi kantonlar ile ilgili bilgiler</caption>
                 <thead>
                     <tr style="background-color: rgb(2, 124, 108);">
