--- a/Web-Fundamentals/Week-3/summary/HTML_Week3_Huseyin_Budak_summary.html
+++ b/Web-Fundamentals/Week-3/summary/HTML_Week3_Huseyin_Budak_summary.html
@@ -104,12 +104,12 @@
         </section>
         <hr> <br> <br>
         <section id="tablo">
-            <table>
+            <table style="width: 100%;">
                 <!--table'a ait taglari kullanarak  istenilen sekilde yapmaya calistim-->
                 <caption>Isvicre'de bazi kantonlar ile ilgili bilgiler</caption>
                 <thead>
                     <tr style="background-color: rgb(2, 124, 108);">
-                        <td style="columns: 4;">Isim</td>
+                        <th style="columns: 4;">Isim</th>
                         <th>Kisaltma</th>
                         <th>En Buyuk Sehri</th>
                         <th style="columns: 2;">Nufusu</th>
