--- a/IT-101/Week-3/index.html
+++ b/IT-101/Week-3/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    main>(header{Header })>(nav>ul>li*3)>(section>article{Article $}*4)>(section>aside{Sidebar})>footer{Footer}    
+
 </body>
 </html>
