--- a/Web-Fundamentals/HTML/Week-3/summary/HTML_Week3_Huseyin_Budak_summary.html
+++ b/Web-Fundamentals/HTML/Week-3/summary/HTML_Week3_Huseyin_Budak_summary.html
@@ -109,10 +109,10 @@
                 <caption>Isvicre'de bazi kantonlar ile ilgili bilgiler</caption>
                 <thead>
                     <tr style="background-color: rgb(2, 124, 108);">
-                        <th style="columns: 4;">Isim</th>
+                        <th colspan="2">Isim</th>
                         <th>Kisaltma</th>
                         <th>En Buyuk Sehri</th>
-                        <th style="columns: 2;">Nufusu</th>
+                        <th align="center" colspan="2">Nufusu</th>
                         <th>Konusulan dil</th>
                         <th>Bayragi</th>
                         <th>Sayfasi</th>
@@ -120,10 +120,10 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Zurich</td>
+                        <td style="text-align: center; ">Zurich</td>
                         <td>ZH</td>
                         <td>Zurich</td>
-                        <td>1'504'346</td>
+                        <td style="text-align: center;">1'504'346</td>
                         <td>Almanca</td>
                         <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Wappen_Z%C3%BCrich_matt.svg/1200px-Wappen_Z%C3%BCrich_matt.svg.png"
                                 alt="canton-zurich" width="20px"> </td>
@@ -157,7 +157,7 @@
                     <tr>
                         <td colspan="3" style="background-color: rgb(202, 202, 3); text-align: center;">Toplam Nufus
                         </td>
-                        <td>8'039'060</td>
+                        <td>8'039'060 </td>
                     </tr>
                 </tfoot>
             </table>
