--- a/Web-Fundamentals/CSS/Week-1/index.html
+++ b/Web-Fundamentals/CSS/Week-1/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>sen</h1>
+    <h1>HiCoders pratik</h1>
+    <p>Mehmet abi bize pratik yaptiriyor</p>
+    <table>
+        <tr>
+            <th>Isim</th>
+            <th>derse katilim</th>
+            <th>aktiflik</th>
+            <th>puan</th>
+        </tr>
+        <tr>
+            <td>Ibrahim</td>
+            <td>Ferhat</td>
+            <td>Huseyin</td>
+        </tr>
+        <tr>
+            
+        </tr>
+    </table>
 </body>
 </html>
