--- a/Web-Fundamentals/CSS/Week-2/index.html
+++ b/Web-Fundamentals/CSS/Week-2/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- I use only 3 tag here -->
     <section id="outside"></section>
     <section id="vertical"></section>
     <section id="horizontal"></section>
