--- a/Web-Fundamentals/HTML/Week-1/HTML_Week1_Huseyin_Budak_index.html
+++ b/Web-Fundamentals/HTML/Week-1/HTML_Week1_Huseyin_Budak_index.html
@@ -15,7 +15,7 @@
 
         <br>
         <p>
-            Bu paragraf anlamli hicbirsey icermiyor
+            Bu paragraf anlamli hicbirsey icermiyo
         </p>
         <br>
 
